RESOLVED FIXED191233
[GTK] Cannot make debug builds of JSC using release 2.22.3
https://bugs.webkit.org/show_bug.cgi?id=191233
Summary [GTK] Cannot make debug builds of JSC using release 2.22.3
Adrian Perez
Reported 2018-11-04 06:48:37 PST
Using -DCMAKE_BUILD_TYPE=Debug results the following build error: ../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2923:48: error: no member named 'StructureForInContextType' in JSC::ForInContext' ASSERT(context.type() == ForInContext::StructureForInContextType); ~~~~~~~~~~~~~~^ DerivedSources/ForwardingHeaders/wtf/Assertions.h:318:11: note: expanded from macro 'ASSERT' if (!(assertion)) { \ ^~~~~~~~~ 1 error generated.
Attachments
Patch (1.78 KB, patch)
2018-11-04 07:04 PST, Adrian Perez
no flags
Adrian Perez
Comment 1 2018-11-04 06:51:17 PST
Upstream does not have the assertion, and the explicit cast should have been changed to “context.asStructureForInContext()” after r237502 in the stable release branch. I am making a patch for this.
Adrian Perez
Comment 2 2018-11-04 07:04:41 PST
Adrian Perez
Comment 3 2018-11-04 07:07:06 PST
(In reply to Adrian Perez from comment #2) > Created attachment 353803 [details] > Patch Manually landed as r237780 in the webkit-2.22 branch: https://trac.webkit.org/changeset/237780/webkit/releases/WebKitGTK/webkit-2.22
Radar WebKit Bug Importer
Comment 4 2018-11-04 07:08:19 PST
Note You need to log in before you can comment on or make changes to this bug.