[GTK] Cannot make debug builds of JSC using release 2.22.3 https://bugs.webkit.org/show_bug.cgi?id=191233

Unreviewed build fix.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitGetByVal):
Use context.asStructureForInContext() instead of explicit cast and
remove the unneeded assertion, which is already done in the helper
function.